Fixed loading screen on narrow screens

--- a/web/style.css
+++ b/web/style.css
@@ -18,21 +18,23 @@ body {
 }
 
 #loading {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
   text-align: center;
 }
 
 #phrazy-text {
   color: black;
-  font-size: 6rem;
+  font-size: 4rem;
   font-variation-settings: "wght" 1000;
-  letter-spacing: -1.125rem;
   font-family: 'PhrazyFont', sans-serif;
   margin-bottom: -2rem;
+  letter-spacing: -0.75rem;
   display: inline-block;
+  white-space: nowrap;
 }
 
 .letter {
